# agent-zero

./: .env.example  README.md  agent_zero_cli.py  pyproject.toml
agent/: executor.py  judge.py  memory.py  planner.py  recovery.py  runtime.py  vector_store.py
core/: embeddings.py  llm.py  schema.py
eval/: planner_eval.py  report_planner_eval.py
eval/datasets/: planner_goals.jsonl
examples/: company_research.py
tests/: test_smoke.py
tools/: base.py  search.py
