[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-zero"
version = "0.1.0"
description = "Minimal Agent Runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0"
]

[tool.setuptools]
py-modules = ["agent_zero_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "core*", "tools*"]

[project.scripts]
agent-zero = "agent_zero_cli:main"
